--- a/REACT practice/my-app/tsconfig.json
+++ b/REACT practice/my-app/tsconfig.json
@@ -7,7 +7,8 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./src",
     "allowJs": true,
-    "outDir": "./dist",
+    "outDir": "./dist", //скомпилированные файлы будут сохраняться в указанной директории
+    "moduleResolution": "node",
 
     "paths": {
       "*": ["types/*"]
