--- a/REACT practice/my-app/package.json
+++ b/REACT practice/my-app/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.0",
     "react-icons": "^4.10.1",
     "web-vitals": "^2.1.4"
   },
